Fixed type spacing on entity pages.

--- a/frontend/src/app/[pageSlug]/[entitySlug]/styles.module.scss
+++ b/frontend/src/app/[pageSlug]/[entitySlug]/styles.module.scss
@@ -23,12 +23,11 @@
   left: 0;
   background-color: color("black");
   color: color("white");
-  font-size: 2em;
+  font-size: 1.8em;
   padding: 0.2em;
-  margin-bottom: -0.2em;
   font-weight: 700;
   overflow: hidden;
-  height: 1.2em;
+  height: 1.4em;
   z-index: zIndex("medium");
   border-bottom: 1px solid color("darkestgray");
 
@@ -56,7 +55,7 @@
 
     @include media("lg") {
       transform-origin: 50% 0%;
-      align-items: flex-end;
+      align-items: center;
       &:hover {
         opacity: 0.5;
         transform: scaleY(0.95);
@@ -66,12 +65,10 @@
 
   @include media('lg') {
     writing-mode: vertical-lr;
-    margin-left: -0.2em;
     margin-bottom: unset;
     overflow: hidden;
     height: unset;
     width: 1.4em;
-    left: -0.2em;
     border-bottom: unset;
     border-right: 1px solid color("darkestgray");
   }
