--- a/frontend/src/styles/components/Nav.module.scss
+++ b/frontend/src/styles/components/Nav.module.scss
@@ -69,6 +69,10 @@
       linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1px, transparent 1px);
     mask: linear-gradient(black 60%, transparent);
     // transition: 1s;
+
+    @include media("lg") {
+      backdrop-filter: none;
+    }
   }
 }
 
